# AppCodePlayer

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/appcode/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AppCodeFFmpeg.cpp  AppCodeFFmpeg.h  AppCodePlayer.cpp  AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  SafeQueue.cpp  SafeQueue.h  VideoChannel.cpp  VideoChannel.h  constant.cpp  constant.h  native-lib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/appcode/: AppCodeApplication.java
app/src/main/java/com/appcode/net/: HttpManager.java
app/src/main/java/com/appcode/player/: AppCodePlayer.java  MainActivity.java  PlayerActivity.java
app/src/main/java/com/appcode/utils/: PermissionManager.java
app/src/main/res/layout/: activity_main.xml  activity_player.xml  content_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/appcode/player/: ExampleUnitTest.java
